frontend/test/should_fail/cast_node_edge_exec.grg
using cast_model;

rule r {
	n:N;
	
	modify {
	---
		def -e:E->;
		exec ({
			e = (E)n
		});
	}
}
